[gd_scene load_steps=5 format=3 uid="uid://bedrxk0dm504y"]

[ext_resource type="Script" uid="uid://bu5uiulkjj7v4" path="res://deck.gd" id="1_glv2v"]
[ext_resource type="Script" uid="uid://ddd23kplou5se" path="res://multiplayer.gd" id="1_r0du0"]
[ext_resource type="Script" uid="uid://sok0ojsutxcx" path="res://card.gd" id="2_cm0pq"]
[ext_resource type="Script" uid="uid://c64vhr6i58x16" path="res://hand.gd" id="4_cm0pq"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0

[node name="Multiplayer" type="Node" parent="." groups=["mul"]]
unique_name_in_owner = true
script = ExtResource("1_r0du0")

[node name="Panel" type="Panel" parent="Multiplayer"]
offset_left = 950.0
offset_top = 44.0
offset_right = 1250.0
offset_bottom = 202.0

[node name="VBoxContainer" type="VBoxContainer" parent="Multiplayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="host" type="Button" parent="Multiplayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="join" type="Button" parent="Multiplayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="Button" type="Button" parent="Multiplayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="TextEdit" type="TextEdit" parent="Multiplayer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "localhost"

[node name="table" type="Control" parent="." groups=["table"]]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 779.0
offset_top = 513.0
offset_right = 779.0
offset_bottom = 513.0
script = ExtResource("2_cm0pq")

[node name="ColorRect" type="ColorRect" parent="table"]
layout_mode = 0
offset_left = -75.0
offset_top = -400.0
offset_right = 75.0
offset_bottom = -175.0

[node name="ColorRect2" type="ColorRect" parent="table/ColorRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 215.0
color = Color(0.720698, 0.116166, 0.810109, 1)

[node name="Label" type="Label" parent="table/ColorRect/ColorRect2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "NUMMMM"

[node name="Label2" type="Label" parent="table/ColorRect/ColorRect2"]
layout_mode = 0
offset_top = 30.0
offset_right = 88.0
offset_bottom = 53.0
text = "POWERRRR"

[node name="Deck" type="Control" parent="." groups=["deck"]]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 416.0
offset_top = 513.0
offset_right = 416.0
offset_bottom = 513.0
script = ExtResource("1_glv2v")

[node name="ColorRect" type="ColorRect" parent="Deck"]
layout_mode = 0
offset_left = -75.0
offset_top = -400.0
offset_right = 75.0
offset_bottom = -175.0

[node name="ColorRect2" type="ColorRect" parent="Deck/ColorRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 215.0
color = Color(0.720698, 0.116166, 0.810109, 1)

[node name="Label" type="Label" parent="Deck/ColorRect/ColorRect2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "NUMMMM"

[node name="Label2" type="Label" parent="Deck/ColorRect/ColorRect2"]
layout_mode = 0
offset_top = 30.0
offset_right = 88.0
offset_bottom = 53.0
text = "POWERRRR"

[node name="Button" type="Button" parent="Deck/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Hand" type="Control" parent="." groups=["hand"]]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 640.0
offset_top = 870.0
offset_right = 640.0
offset_bottom = 870.0
script = ExtResource("4_cm0pq")

[connection signal="pressed" from="Multiplayer/Panel/VBoxContainer/host" to="Multiplayer" method="_on_host_pressed"]
[connection signal="pressed" from="Multiplayer/Panel/VBoxContainer/join" to="Multiplayer" method="_on_join_pressed"]
[connection signal="pressed" from="Multiplayer/Panel/VBoxContainer/Button" to="Multiplayer" method="_on_button_pressed"]
[connection signal="pressed" from="Deck/ColorRect/Button" to="Deck" method="_on_button_pressed"]
[connection signal="child_order_changed" from="Hand" to="Hand" method="organize"]
